--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Postgres
-DATABASE_URL=postgres://postgres:postgrespw@localhost:55008
+DATABASE_URL=postgres://postgres:postgrespw@127.0.0.1:55008
