--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,9 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 axum = "0.7.4"
+log = "0.4.20"
+sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }
+dotenvy = "0.15"
+pretty_env_logger = "0.5"
+async-trait = "0.1"
+thiserror = "1.0"
